# Graphy

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Cargo.toml  Dockerfile
api/migrations/2019-03-26-222351_users/: up.sql
api/migrations/2019-06-02-094926_groups/: up.sql
api/migrations/2019-06-02-100312_users_groups/: down.sql  up.sql
api/src/: lib.rs  main.rs
api/src/config/: mod.rs
api/src/context/: mod.rs
api/src/db/: mod.rs
api/src/error/: mod.rs
api/src/hasher/: mod.rs
api/src/models/: group.rs  mod.rs  schema.rs  user.rs  user_group.rs
api/src/routes/graphql/: mod.rs  schema.rs
api/src/tokeniser/: mod.rs
api/tests/: integration_tests.rs
api/tests/common/: mod.rs
