[package]
name = "api"
version = "0.1.0"
authors = ["Will Squire <will@willsquire.com>"]
description = "GraphQL API server"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32.0"
diesel = { version = "1.4.1", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
jsonwebtoken = "5.0.1"
juniper = "0.11.1"
juniper_warp = "0.2.0"
r2d2 = "0.8.4"
rust-argon2 = "0.4.0"
serde = { version = "1.0.90", features = ["derive"] }
uuid = { version = "0.7.2", features = ["v4", "serde"] }
warp = "0.1.15"

[dev-dependencies]
serde_json = "1.0.39"
